MPS/mp1/src/cool.output
Terminals unused in grammar

    ERROR


State 54 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' lst_feature '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' lst_feature '}' ';'

    6 lst_feature: lst_feature method ';'
    7            | lst_feature attr ';'
    8            | ε
    9            | error ';'

   10 attr: OBJECTID ':' TYPEID
   11     | OBJECTID ':' TYPEID ASSIGN expression

   12 method: OBJECTID '(' lst_formal ')' ':' TYPEID '{' expression '}'

   13 lst_formal: formal
   14           | lst_formal ',' formal
   15           | ε

   16 formal: OBJECTID ':' TYPEID

   17 expression: OBJECTID ASSIGN expression
   18           | expression '@' TYPEID '.' OBJECTID '(' lst_arg ')'
   19           | expression '.' OBJECTID '(' lst_arg ')'
   20           | OBJECTID '(' lst_arg ')'
   21           | WHILE expression LOOP expression POOL
   22           | IF expression THEN expression ELSE expression FI
   23           | '{' expression_list '}'
   24           | '{' error '}'
   25           | LET let_exp_nested
   26           | CASE expression OF lst_case ESAC
   27           | NEW TYPEID
   28           | ISVOID expression
   29           | expression '*' expression
   30           | expression '/' expression
   31           | '~' expression
   32           | expression '+' expression
   33           | expression '-' expression
   34           | expression '<' expression
   35           | expression LE expression
   36           | expression '=' expression
   37           | NOT expression
   38           | '(' expression ')'
   39           | STR_CONST
   40           | BOOL_CONST
   41           | OBJECTID
   42           | INT_CONST

   43 lst_case: branch_case
   44         | lst_case branch_case

   45 branch_case: OBJECTID ':' TYPEID DARROW expression ';'

   46 let_exp_nested: OBJECTID ':' TYPEID IN expression
   47               | OBJECTID ':' TYPEID ASSIGN expression IN expression
   48               | OBJECTID ':' TYPEID ',' let_exp_nested
   49               | OBJECTID ':' TYPEID ASSIGN expression ',' let_exp_nested
   50               | error ','
   51               | error

   52 lst_arg: expression
   53        | lst_arg ',' expression
   54        | ε

   55 expression_list: expression ';'
   56                | expression_list expression ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 12 18 19 20 38
    ')' (41) 12 18 19 20 38
    '*' (42) 29
    '+' (43) 32
    ',' (44) 14 48 49 50 53
    '-' (45) 33
    '.' (46) 18 19
    '/' (47) 30
    ':' (58) 10 11 12 16 45 46 47 48 49
    ';' (59) 4 5 6 7 9 45 55 56
    '<' (60) 34
    '=' (61) 36
    '@' (64) 18
    '{' (123) 4 5 12 23 24
    '}' (125) 4 5 12 23 24
    '~' (126) 31
    error (256) 9 24 50 51
    CLASS (258) 4 5
    ELSE (259) 22
    FI (260) 22
    IF (261) 22
    IN (262) 46 47
    INHERITS (263) 5
    LET (264) 25
    LOOP (265) 21
    POOL (266) 21
    THEN (267) 22
    WHILE (268) 21
    CASE (269) 26
    ESAC (270) 26
    OF (271) 26
    DARROW (272) 45
    NEW (273) 27
    ISVOID (274) 28
    STR_CONST <symbol> (275) 39
    INT_CONST <symbol> (276) 42
    BOOL_CONST <boolean> (277) 40
    TYPEID <symbol> (278) 4 5 10 11 12 16 18 27 45 46 47 48 49
    OBJECTID <symbol> (279) 10 11 12 16 17 18 19 20 41 45 46 47 48 49
    ASSIGN (280) 11 17 47 49
    NOT (281) 37
    LE (282) 35
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5
        on right: 2 3
    lst_feature <features> (49)
        on left: 6 7 8 9
        on right: 4 5 6 7
    attr <feature> (50)
        on left: 10 11
        on right: 7
    method <feature> (51)
        on left: 12
        on right: 6
    lst_formal <formals> (52)
        on left: 13 14 15
        on right: 12 14
    formal <formal> (53)
        on left: 16
        on right: 13 14
    expression <expression> (54)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 11 12 17 18 19 21 22 26 28 29 30 31 32 33 34 35 36 37 38 45 46 47 49 52 53 55 56
    lst_case <cases> (55)
        on left: 43 44
        on right: 26 44
    branch_case <case_> (56)
        on left: 45
        on right: 43 44
    let_exp_nested <expression> (57)
        on left: 46 47 48 49 50 51
        on right: 25 48 49
    lst_arg <expressions> (58)
        on left: 52 53 54
        on right: 18 19 20 53
    expression_list <expressions> (59)
        on left: 55 56
        on right: 23 56


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS • TYPEID '{' lst_feature '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' lst_feature '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: class_list •
    3 class_list: class_list • class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID • '{' lst_feature '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' lst_feature '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end •

    $default  accept


State 7

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS • TYPEID '{' lst_feature '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' • lst_feature '}' ';'

    error  shift, and go to state 11

    OBJECTID  reduce using rule 8 (lst_feature)
    '}'       reduce using rule 8 (lst_feature)

    lst_feature  go to state 12


State 10

    5 class: CLASS TYPEID INHERITS TYPEID • '{' lst_feature '}' ';'

    '{'  shift, and go to state 13


State 11

    9 lst_feature: error • ';'

    ';'  shift, and go to state 14


State 12

    4 class: CLASS TYPEID '{' lst_feature • '}' ';'
    6 lst_feature: lst_feature • method ';'
    7            | lst_feature • attr ';'

    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 16

    attr    go to state 17
    method  go to state 18


State 13

    5 class: CLASS TYPEID INHERITS TYPEID '{' • lst_feature '}' ';'

    error  shift, and go to state 11

    OBJECTID  reduce using rule 8 (lst_feature)
    '}'       reduce using rule 8 (lst_feature)

    lst_feature  go to state 19


State 14

    9 lst_feature: error ';' •

    $default  reduce using rule 9 (lst_feature)


State 15

   10 attr: OBJECTID • ':' TYPEID
   11     | OBJECTID • ':' TYPEID ASSIGN expression
   12 method: OBJECTID • '(' lst_formal ')' ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 20
    '('  shift, and go to state 21


State 16

    4 class: CLASS TYPEID '{' lst_feature '}' • ';'

    ';'  shift, and go to state 22


State 17

    7 lst_feature: lst_feature attr • ';'

    ';'  shift, and go to state 23


State 18

    6 lst_feature: lst_feature method • ';'

    ';'  shift, and go to state 24


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' lst_feature • '}' ';'
    6 lst_feature: lst_feature • method ';'
    7            | lst_feature • attr ';'

    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 25

    attr    go to state 17
    method  go to state 18


State 20

   10 attr: OBJECTID ':' • TYPEID
   11     | OBJECTID ':' • TYPEID ASSIGN expression

    TYPEID  shift, and go to state 26


State 21

   12 method: OBJECTID '(' • lst_formal ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 27

    $default  reduce using rule 15 (lst_formal)

    lst_formal  go to state 28
    formal      go to state 29


State 22

    4 class: CLASS TYPEID '{' lst_feature '}' ';' •

    $default  reduce using rule 4 (class)


State 23

    7 lst_feature: lst_feature attr ';' •

    $default  reduce using rule 7 (lst_feature)


State 24

    6 lst_feature: lst_feature method ';' •

    $default  reduce using rule 6 (lst_feature)


State 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' lst_feature '}' • ';'

    ';'  shift, and go to state 30


State 26

   10 attr: OBJECTID ':' TYPEID •
   11     | OBJECTID ':' TYPEID • ASSIGN expression

    ASSIGN  shift, and go to state 31

    $default  reduce using rule 10 (attr)


State 27

   16 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 32


State 28

   12 method: OBJECTID '(' lst_formal • ')' ':' TYPEID '{' expression '}'
   14 lst_formal: lst_formal • ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 29

   13 lst_formal: formal •

    $default  reduce using rule 13 (lst_formal)


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' lst_feature '}' ';' •

    $default  reduce using rule 5 (class)


State 31

   11 attr: OBJECTID ':' TYPEID ASSIGN • expression

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 49


State 32

   16 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 50


State 33

   12 method: OBJECTID '(' lst_formal ')' • ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 51


State 34

   14 lst_formal: lst_formal ',' • formal

    OBJECTID  shift, and go to state 27

    formal  go to state 52


State 35

   22 expression: IF • expression THEN expression ELSE expression FI

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 53


State 36

   25 expression: LET • let_exp_nested

    error     shift, and go to state 54
    OBJECTID  shift, and go to state 55

    let_exp_nested  go to state 56


State 37

   21 expression: WHILE • expression LOOP expression POOL

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 57


State 38

   26 expression: CASE • expression OF lst_case ESAC

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 58


State 39

   27 expression: NEW • TYPEID

    TYPEID  shift, and go to state 59


State 40

   28 expression: ISVOID • expression

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 60


State 41

   39 expression: STR_CONST •

    $default  reduce using rule 39 (expression)


State 42

   42 expression: INT_CONST •

    $default  reduce using rule 42 (expression)


State 43

   40 expression: BOOL_CONST •

    $default  reduce using rule 40 (expression)


State 44

   17 expression: OBJECTID • ASSIGN expression
   20           | OBJECTID • '(' lst_arg ')'
   41           | OBJECTID •

    ASSIGN  shift, and go to state 61
    '('     shift, and go to state 62

    $default  reduce using rule 41 (expression)


State 45

   37 expression: NOT • expression

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 63


State 46

   31 expression: '~' • expression

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 64


State 47

   23 expression: '{' • expression_list '}'
   24           | '{' • error '}'

    error       shift, and go to state 65
    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression       go to state 66
    expression_list  go to state 67


State 48

   38 expression: '(' • expression ')'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 68


State 49

   11 attr: OBJECTID ':' TYPEID ASSIGN expression •
   18 expression: expression • '@' TYPEID '.' OBJECTID '(' lst_arg ')'
   19           | expression • '.' OBJECTID '(' lst_arg ')'
   29           | expression • '*' expression
   30           | expression • '/' expression
   32           | expression • '+' expression
   33           | expression • '-' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression

    LE   shift, and go to state 69
    '.'  shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77

    $default  reduce using rule 11 (attr)


State 50

   16 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 16 (formal)


State 51

   12 method: OBJECTID '(' lst_formal ')' ':' • TYPEID '{' expression '}'

    TYPEID  shift, and go to state 78


State 52

   14 lst_formal: lst_formal ',' formal •

    $default  reduce using rule 14 (lst_formal)


State 53

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' lst_arg ')'
   19           | expression • '.' OBJECTID '(' lst_arg ')'
   22           | IF expression • THEN expression ELSE expression FI
   29           | expression • '*' expression
   30           | expression • '/' expression
   32           | expression • '+' expression
   33           | expression • '-' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression

    THEN  shift, and go to state 79
    LE    shift, and go to state 69
    '.'   shift, and go to state 70
    '+'   shift, and go to state 71
    '-'   shift, and go to state 72
    '*'   shift, and go to state 73
    '/'   shift, and go to state 74
    '@'   shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77


State 54

   50 let_exp_nested: error • ','
   51               | error •

    ','  shift, and go to state 80

    ','       [reduce using rule 51 (let_exp_nested)]
    $default  reduce using rule 51 (let_exp_nested)


State 55

   46 let_exp_nested: OBJECTID • ':' TYPEID IN expression
   47               | OBJECTID • ':' TYPEID ASSIGN expression IN expression
   48               | OBJECTID • ':' TYPEID ',' let_exp_nested
   49               | OBJECTID • ':' TYPEID ASSIGN expression ',' let_exp_nested

    ':'  shift, and go to state 81


State 56

   25 expression: LET let_exp_nested •

    $default  reduce using rule 25 (expression)


State 57

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' lst_arg ')'
   19           | expression • '.' OBJECTID '(' lst_arg ')'
   21           | WHILE expression • LOOP expression POOL
   29           | expression • '*' expression
   30           | expression • '/' expression
   32           | expression • '+' expression
   33           | expression • '-' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression

    LOOP  shift, and go to state 82
    LE    shift, and go to state 69
    '.'   shift, and go to state 70
    '+'   shift, and go to state 71
    '-'   shift, and go to state 72
    '*'   shift, and go to state 73
    '/'   shift, and go to state 74
    '@'   shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77


State 58

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' lst_arg ')'
   19           | expression • '.' OBJECTID '(' lst_arg ')'
   26           | CASE expression • OF lst_case ESAC
   29           | expression • '*' expression
   30           | expression • '/' expression
   32           | expression • '+' expression
   33           | expression • '-' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression

    OF   shift, and go to state 83
    LE   shift, and go to state 69
    '.'  shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77


State 59

   27 expression: NEW TYPEID •

    $default  reduce using rule 27 (expression)


State 60

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' lst_arg ')'
   19           | expression • '.' OBJECTID '(' lst_arg ')'
   28           | ISVOID expression •
   29           | expression • '*' expression
   30           | expression • '/' expression
   32           | expression • '+' expression
   33           | expression • '-' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression

    LE   shift, and go to state 69
    '@'  shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77

    $default  reduce using rule 28 (expression)


State 61

   17 expression: OBJECTID ASSIGN • expression

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression  go to state 84


State 62

   20 expression: OBJECTID '(' • lst_arg ')'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    $default  reduce using rule 54 (lst_arg)

    expression  go to state 85
    lst_arg     go to state 86


State 63

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' lst_arg ')'
   19           | expression • '.' OBJECTID '(' lst_arg ')'
   29           | expression • '*' expression
   30           | expression • '/' expression
   32           | expression • '+' expression
   33           | expression • '-' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression
   37           | NOT expression •

    LE   shift, and go to state 69
    '<'  shift, and go to state 76
    '='  shift, and go to state 77

    $default  reduce using rule 37 (expression)


State 64

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' lst_arg ')'
   19           | expression • '.' OBJECTID '(' lst_arg ')'
   29           | expression • '*' expression
   30           | expression • '/' expression
   31           | '~' expression •
   32           | expression • '+' expression
   33           | expression • '-' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression

    LE   shift, and go to state 69
    '@'  shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77

    $default  reduce using rule 31 (expression)


State 65

   24 expression: '{' error • '}'

    '}'  shift, and go to state 87


State 66

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' lst_arg ')'
   19           | expression • '.' OBJECTID '(' lst_arg ')'
   29           | expression • '*' expression
   30           | expression • '/' expression
   32           | expression • '+' expression
   33           | expression • '-' expression
   34           | expression • '<' expression
   35           | expression • LE expression
   36           | expression • '=' expression
   55 expression_list: expression • ';'

    LE   shift, and go to state 69
    '.'  shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    ';'  shift, and go to state 88


State 67

   23 expression: '{' expression_list • '}'
   56 expression_list: expression_list • expression ';'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '}'         shift, and go to state 89
    '('         shift, and go to state 48

    expression  go to state 90


State 68
